# agentic-research-briefing-rag

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
app/: streamlit_app.py
core/: config.py  dataset.jsonl  engine.py  eval.py  guardrails.py  llm.py  observability.py  rag.py
data/raw/pages/: agentic_workflows.md  evaluation_metrics.md  glossary.md  notes.txt  rag_overview.md
docker/: Dockerfile
tests/: test_eval_smoke.py  test_guardrails.py  test_rag_smoke.py
